# FFmpegOnAndroid

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/medilab/av/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/medilab/av/: MainActivity.java  MySurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/medilab/av/: ExampleUnitTest.java
avlib/: CMakeLists.txt  build.gradle
avlib/src/androidTest/java/com/medilab/avlib/: ExampleInstrumentedTest.java
avlib/src/main/: AndroidManifest.xml
avlib/src/main/cpp/: decodec.c  decodecInClass.cpp  ffmpegdecode.cpp
avlib/src/main/cpp/armeabi-v7a/include/: ffmpegdecode.h
avlib/src/main/java/com/medilab/avlib/: AVSurfaceView.java  AVdecode.java  AVdecodeInClass.java  MainActivity.java
avlib/src/main/res/layout/: activity_main.xml
avlib/src/main/res/values/: strings.xml
avlib/src/test/java/com/medilab/avlib/: ExampleUnitTest.java
mediaplayertest/: build.gradle
mediaplayertest/src/androidTest/java/com/medilab/mediaplayertest/: ExampleInstrumentedTest.java
mediaplayertest/src/main/: AndroidManifest.xml
mediaplayertest/src/main/java/com/medilab/mediaplayertest/: MainActivity.java  testMedia.java
mediaplayertest/src/main/res/layout/: activity_main.xml  main.xml
mediaplayertest/src/test/java/com/medilab/mediaplayertest/: ExampleUnitTest.java
